added put and delete routes to users
